--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 <style>
-body{margin:0;font-family:Arial;background:#e5ddd5;height:100vh;overflow:hidden}
-#login,#chat{max-width:420px;margin:auto;height:100vh}
+body, html{margin:0;padding:0;height:100%;font-family:Arial;background:#e5ddd5;}
+#login,#chat{max-width:420px;margin:auto;height:100%;}
 #login{display:flex;flex-direction:column;justify-content:center;padding:20px}
 input,button{padding:12px;margin:6px 0;font-size:16px}
 button{background:#128c7e;color:#fff;border:none}
-#chat{display:none;flex-direction:column}
+#chat{display:none;flex-direction:column;height:100%}
 #header{background:#075e54;color:#fff;padding:12px}
 #headerName{font-size:16px;font-weight:bold}
 #headerStatus{font-size:12px}
-#messages{flex:1;overflow-y:auto;padding:10px}
-.msg{max-width:70%;padding:8px;border-radius:8px;margin:6px 0;font-size:14px}
+#messages{flex:1;overflow-y:auto;padding:10px;background:#e5ddd5}
+.msg{max-width:70%;padding:8px;border-radius:8px;margin:6px 0;font-size:14px;word-wrap:break-word}
 .right{margin-left:auto;background:#dcf8c6}
 .left{margin-right:auto;background:#fff}
 .small{font-size:10px;color:#555;text-align:right}
-#typing{font-size:12px;color:#555;padding-left:10px}
-#sendBox{display:flex}
-#sendBox input{flex:1}
+#typing{font-size:12px;color:#555;padding-left:10px;height:18px}
+#sendBox{display:flex;padding:5px;background:#fff}
+#sendBox input{flex:1;font-size:16px;padding:10px}
+#sendBox button{padding:10px;margin-left:5px}
 </style>
 </head>
 <body>
@@ -53,27 +54,54 @@ const auth=firebase.auth();
 const db=firebase.firestore();
 const users={foreverus10:{email:"unknownmarch1@gmail.com",chat:"Bacha"},foreverus29:{email:"unknownmarch001@gmail.com",chat:"Kakka"}};
 let me="",other="";
-function login(){const u=username.value,p=password.value;if(!users[u]){error.innerText="Invalid user";return;}auth.signInWithEmailAndPassword(users[u].email,p).then(()=>{me=u;other=Object.keys(users).find(x=>x!==u);document.getElementById("login").style.display="none";document.getElementById("chat").style.display="flex";headerName.innerText=users[other].chat;setStatus(true);load();}).catch(e=>error.innerText=e.message);}
-function send(){if(!msg.value)return;db.collection("messages").add({from:me,text:msg.value,time:Date.now(),seen:false});msg.value="";typing(false);} 
-function load(){db.collection("messages").where("from","in",[me,other]).orderBy("time").onSnapshot(s=>{messages.innerHTML="";s.forEach(d=>{const m=d.data();const div=document.createElement("div");div.className="msg "+(m.from===me?"right":"left");div.innerHTML=m.text;if(m.from===me){div.innerHTML+=`<div class='small'>${m.seen?"✔✔ Seen":"✔ Delivered"}</div>`;}else{d.ref.update({seen:true});}messages.appendChild(div);messages.scrollTop=messages.scrollHeight;});});
-  db.collection("status").doc(other).onSnapshot(d=>{
-    const data=d.data();
-    if(data?.online){
-      headerStatus.innerText="online";
-    } else if(data?.lastSeen){
-      const t=new Date(data.lastSeen);
-      const h=('0'+t.getHours()).slice(-2);
-      const m=('0'+t.getMinutes()).slice(-2);
-      headerStatus.innerText=`Last seen ${h}:${m}`;
-    } else {
-      headerStatus.innerText="offline";
-    }
-    typingDiv.innerText=data?.typing?"typing...":"";
+const typingDiv=document.getElementById('typing');
+function login(){
+ const u=username.value,p=password.value;
+ if(!users[u]){error.innerText="Invalid user";return;}
+ auth.signInWithEmailAndPassword(users[u].email,p).then(()=>{
+  me=u;other=Object.keys(users).find(x=>x!==u);
+  document.getElementById("login").style.display="none";
+  document.getElementById("chat").style.display="flex";
+  headerName.innerText=users[other].chat;
+  setStatus(true);
+  load();
+ }).catch(e=>error.innerText=e.message);
+}
+function send(){
+ if(!msg.value)return;
+ db.collection("messages").add({from:me,text:msg.value,time:Date.now(),seen:false});
+ msg.value="";
+ typing(false);
+}
+function load(){
+ db.collection("messages").where("from","in",[me,other]).orderBy("time").onSnapshot(s=>{
+  messages.innerHTML="";
+  s.forEach(d=>{
+   const m=d.data();
+   const div=document.createElement("div");
+   div.className="msg "+(m.from===me?"right":"left");
+   div.innerHTML=m.text;
+   if(m.from===me){div.innerHTML+=`<div class='small'>${m.seen?"✔✔ Seen":"✔ Delivered"}</div>`;}
+   else{d.ref.update({seen:true});}
+   messages.appendChild(div);
+   messages.scrollTop=messages.scrollHeight;
   });
+ });
+ db.collection("status").doc(other).onSnapshot(d=>{
+  const data=d.data();
+  if(data?.online){headerStatus.innerText="online";}
+  else if(data?.lastSeen){
+   const t=new Date(data.lastSeen);
+   const h=('0'+t.getHours()).slice(-2);
+   const m=('0'+t.getMinutes()).slice(-2);
+   headerStatus.innerText=`Last seen ${h}:${m}`;
+  } else {headerStatus.innerText="offline";}
+  typingDiv.innerText=data?.typing?"typing...":"";
+ });
 }
 function setStatus(v){
-  db.collection("status").doc(me).set({online:v,typing:false,lastSeen:v?Date.now():Date.now()});
-  window.onbeforeunload=()=>db.collection("status").doc(me).set({online:false,typing:false,lastSeen:Date.now()});
+ db.collection("status").doc(me).set({online:v,typing:false,lastSeen:Date.now()});
+ window.onbeforeunload=()=>db.collection("status").doc(me).set({online:false,typing:false,lastSeen:Date.now()});
 }
 function typing(v){db.collection("status").doc(me).update({typing:v});}
 </script>
