--- a/index.html
+++ b/index.html
@@ -1,65 +1,221 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>UnknownChat</title>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 <style>
-body,html{margin:0;padding:0;height:100%;font-family:Arial;background:#e5ddd5}
-#loaderBar{height:3px;width:0%;background:#25d366;transition:width .3s}
-#login,#chat{max-width:420px;margin:auto;height:100%}
-#login{display:flex;flex-direction:column;justify-content:center;padding:20px}
-input,button{padding:12px;margin:6px 0;font-size:16px}
-button{background:#128c7e;color:#fff;border:none}
-#chat{display:none;flex-direction:column}
-#header{background:#075e54;color:#fff;padding:10px;display:flex;justify-content:space-between}
-#headerName{font-weight:bold}
-#headerStatus{font-size:12px}
-#messages{flex:1;overflow-y:auto;padding:10px}
-.msg{max-width:70%;padding:8px;border-radius:8px;margin:6px 0}
-.right{margin-left:auto;background:#dcf8c6}
-.left{margin-right:auto;background:#fff}
-#sendBox{display:flex;background:#fff;padding:5px}
-#sendBox input{flex:1}
+body{margin:0;font-family:Arial, sans-serif;background:#f0f0f0;}
+#login,#chat{display:none;padding:20px;}
+input{padding:10px;margin:5px 0;width:90%;}
+button{padding:10px;margin:5px 0;width:95%;}
+#messages{max-height:70vh;overflow-y:auto;margin-bottom:10px;}
+.msg{padding:8px 12px;border-radius:10px;margin:5px 0;max-width:70%;position:relative;}
+.mine{background:#dcf8c6;margin-left:auto;text-align:right;}
+.other{background:#fff;margin-right:auto;text-align:left;}
+.time{font-size:0.7em;color:gray;margin-top:2px;}
+.header{font-weight:bold;font-size:1.1em;margin-bottom:10px;}
+#typing{font-style:italic;color:gray;}
+.date-separator{text-align:center;font-size:0.8em;color:gray;margin:10px 0;}
+.delete-btn{font-size:0.7em;color:red;cursor:pointer;margin-left:5px;}
 </style>
 </head>
 <body>
-<div id="loaderBar"></div>
+
 <div id="login">
-<h2>UnknownChat</h2>
-<input id="username" placeholder="Username">
-<input id="password" type="password" placeholder="Password">
-<button onclick="login()">Login</button>
-<p id="error"></p>
+  <h2>UnknownChat Login</h2>
+  <input type="text" id="username" placeholder="Username"><br>
+  <input type="password" id="password" placeholder="Password">
+  <span id="togglePass" style="cursor:pointer;">👁️</span><br>
+  <button id="loginBtn">Login</button>
+  <div id="loginStatus"></div>
 </div>
+
 <div id="chat">
-<div id="header">
-<div>
-<div id="headerName"></div>
-<div id="headerStatus"></div>
+  <div class="header" id="chatHeader">
+    <div id="chatName"></div>
+    <div id="chatStatus" style="font-size:12px;color:#777;"></div>
+  </div>
+  <div id="typing"></div>
+  <div id="messages"></div>
+  <input type="text" id="msgInput" placeholder="Type a message...">
+  <button id="sendBtn">Send</button>
+  <button id="logoutBtn">Logout</button>
 </div>
-<button onclick="logout()">Logout</button>
-</div>
-<div id="messages"></div>
-<div id="sendBox">
-<input id="msg" placeholder="Type message">
-<button onclick="send()">Send</button>
-</div>
-</div>
+
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+
 <script>
-const firebaseConfig={apiKey:"AIzaSyB57DbuZWjQjaekNFkUrYmABql_yl-KFnA",authDomain:"unknownchat-bbd4b.firebaseapp.com",projectId:"unknownchat-bbd4b",storageBucket:"unknownchat-bbd4b.firebasestorage.app",messagingSenderId:"134440126866",appId:"1:134440126866:web:54c83a3ab12d7bdfc3194b"};
+// Firebase config
+const firebaseConfig = {
+  apiKey: "AIzaSyB57DbuZWjQjaekNFkUrYmABql_yl-KFnA",
+  authDomain: "unknownchat-bbd4b.firebaseapp.com",
+  projectId: "unknownchat-bbd4b",
+  storageBucket: "unknownchat-bbd4b.appspot.com",
+  messagingSenderId: "134440126866",
+  appId: "1:134440126866:web:54c83a3ab12d7bdfc3194b"
+};
 firebase.initializeApp(firebaseConfig);
-const auth=firebase.auth();
-const db=firebase.firestore();
-const users={foreverus10:{email:"unknownmarch1@gmail.com",chat:"Bacha"},foreverus29:{email:"unknownmarch001@gmail.com",chat:"Kakka"}};
-let me="",other="";
-function setLoad(p){document.getElementById('loaderBar').style.width=p+'%'}
-function login(){error.innerText="";setLoad(20);const u=username.value,p=password.value;if(!users[u]){error.innerText="Invalid username";setLoad(0);return;}setLoad(40);auth.signInWithEmailAndPassword(users[u].email,p).then(()=>{setLoad(70);me=u;other=Object.keys(users).find(x=>x!==u);headerName.innerText=users[other].chat;document.getElementById('login').style.display='none';document.getElementById('chat').style.display='flex';setLoad(100);load();}).catch(e=>{error.innerText=e.message;setLoad(0);});}
-function logout(){auth.signOut();location.reload()}
-function send(){if(!msg.value)return;db.collection('messages').add({from:me,to:other,text:msg.value,time:Date.now()});msg.value=''}
-function load(){db.collection('messages').orderBy('time').onSnapshot(s=>{messages.innerHTML='';s.forEach(d=>{const m=d.data();if((m.from===me&&m.to===other)||(m.from===other&&m.to===me)){const div=document.createElement('div');div.className='msg '+(m.from===me?'right':'left');div.innerText=m.text;messages.appendChild(div);messages.scrollTop=messages.scrollHeight;}})});
+const db = firebase.firestore();
+
+// Users mapping
+const users = { "foreverus10":"Kakka", "foreverus29":"Bacha" };
+
+let currentUser="", friendUser="";
+const loginDiv = document.getElementById("login");
+const chatDiv = document.getElementById("chat");
+const loginBtn = document.getElementById("loginBtn");
+const sendBtn = document.getElementById("sendBtn");
+const logoutBtn = document.getElementById("logoutBtn");
+const msgInput = document.getElementById("msgInput");
+const messagesDiv = document.getElementById("messages");
+const chatName = document.getElementById("chatName");
+const chatStatus = document.getElementById("chatStatus");
+const typingDiv = document.getElementById("typing");
+const usernameInput = document.getElementById("username");
+const passwordInput = document.getElementById("password");
+const togglePass = document.getElementById("togglePass");
+const loginStatus = document.getElementById("loginStatus");
+
+// Toggle password visibility
+togglePass.onclick = ()=>{ passwordInput.type = passwordInput.type==="password"?"text":"password"; }
+
+// Login
+loginBtn.onclick = ()=>{
+  const u = usernameInput.value.trim();
+  const p = passwordInput.value.trim();
+  const validUsers = { "foreverus10":"123456", "foreverus29":"123456" }; // original passwords
+  if(validUsers[u] && validUsers[u]===p){
+    currentUser=u;
+    friendUser=(u==="foreverus10")?"foreverus29":"foreverus10";
+    loginDiv.style.display="none";
+    chatDiv.style.display="block";
+    initChat();
+    bindFriendHeader(currentUser,friendUser);
+    setCurrentOnline();
+  } else loginStatus.innerText="Invalid username or password";
+}
+
+// Logout
+logoutBtn.onclick = ()=>{ location.reload(); }
+
+// Messages
+let lastMsgDate="";
+let typingTimeout;
+
+// Initialize chat
+function initChat(){
+  // Typing indicator
+  db.collection("status").doc(friendUser).onSnapshot(snap=>{
+    const data = snap.data();
+    if(data) typingDiv.innerText = data.typing?"Typing...":"";
+  });
+
+  // Listen messages
+  db.collection("messages").orderBy("time").onSnapshot(snapshot=>{
+    messagesDiv.innerHTML="";
+    snapshot.forEach(doc=>{
+      const msg = doc.data();
+      if(msg.deletedFor && msg.deletedFor.includes(currentUser)) return; // skip deleted for me
+      const msgDate = msg.time.toDate();
+      const dateStr = msgDate.toLocaleDateString();
+      if(dateStr!==lastMsgDate){
+        const sep = document.createElement("div");
+        sep.className="date-separator";
+        sep.innerText = (dateStr===new Date().toLocaleDateString())?"Today":dateStr;
+        messagesDiv.appendChild(sep);
+        lastMsgDate=dateStr;
+      }
+      const div = document.createElement("div");
+      div.className = (msg.user===currentUser)?"msg mine":"msg other";
+      div.innerHTML = `<span>${msg.text}</span><div class="time">${msg.user===currentUser?formatTime(msgDate)+" "+getStatusIcon(msg.status):formatTime(msgDate)}</div>`;
+      if(msg.user===currentUser){
+        const delMe = document.createElement("span");
+        delMe.className="delete-btn"; delMe.innerText="Delete for me";
+        delMe.onclick=()=>deleteMsg(doc.id,false);
+        const delBoth = document.createElement("span");
+        delBoth.className="delete-btn"; delBoth.innerText="Delete for both";
+        delBoth.onclick=()=>deleteMsg(doc.id,true);
+        div.appendChild(delMe);
+        div.appendChild(delBoth);
+      }
+      messagesDiv.appendChild(div);
+    });
+    messagesDiv.scrollTop=messagesDiv.scrollHeight;
+  });
+}
+
+// Send message
+sendBtn.onclick = ()=>{ sendMessage(); }
+msgInput.oninput = ()=>{
+  db.collection("status").doc(currentUser).set({typing:true},{merge:true});
+  clearTimeout(typingTimeout);
+  typingTimeout = setTimeout(()=>{
+    db.collection("status").doc(currentUser).set({typing:false},{merge:true});
+  },1000);
+}
+
+function sendMessage(){
+  const text = msgInput.value.trim();
+  if(!text) return;
+  db.collection("messages").add({
+    text,
+    user: currentUser,
+    time: firebase.firestore.Timestamp.now(),
+    status: "sent"
+  });
+  msgInput.value="";
+}
+
+// Format time HH:MM
+function formatTime(d){return d.getHours().toString().padStart(2,'0')+":"+d.getMinutes().toString().padStart(2,'0');}
+
+// Status icons
+function getStatusIcon(status){
+  if(status==="sent") return "✔";
+  if(status==="delivered") return "✔✔";
+  if(status==="seen") return '<span style="color:#ff69b4;">✔✔</span>';
+  return "";
+}
+
+// Delete message
+function deleteMsg(id,forBoth){
+  if(forBoth){
+    if(confirm("Delete for both?")) db.collection("messages").doc(id).delete();
+  } else {
+    db.collection("messages").doc(id).update({deletedFor: firebase.firestore.FieldValue.arrayUnion(currentUser)});
+  }
+}
+
+// Header & friend status
+function bindFriendHeader(currentUser, friendUser){
+  chatName.innerText = users[friendUser];
+  db.collection("status").doc(friendUser).onSnapshot(snap=>{
+    if(!snap.exists) return;
+    const s = snap.data();
+    if(s.online) chatStatus.innerText="online";
+    else chatStatus.innerText = s.lastSeen?`last seen ${formatLastSeen(s.lastSeen)}`:"offline";
+  });
+}
+
+// Format last seen HH:MM
+function formatLastSeen(ts){
+  if(!ts) return "";
+  const d = ts.toDate ? ts.toDate() : new Date(ts);
+  return d.getHours().toString().padStart(2,'0')+":"+d.getMinutes().toString().padStart(2,'0');
+}
+
+// Set current user online
+function setCurrentOnline(){
+  db.collection("status").doc(currentUser).set({online:true},{merge:true});
+  window.addEventListener("beforeunload", ()=>{
+    db.collection("status").doc(currentUser).set({
+      online:false,
+      lastSeen: firebase.firestore.FieldValue.serverTimestamp()
+    },{merge:true});
+  });
 }
 </script>
 </body>
