--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>UnknownChat</title>
 <style>
-body{margin:0;font-family:Arial, sans-serif;background:#f0f0f0;}
+body{margin:0;font-family:Arial,sans-serif;background:#f0f0f0;}
 #login,#chat{display:none;padding:20px;}
 input{padding:10px;margin:5px 0;width:90%;}
 button{padding:10px;margin:5px 0;width:95%;}
@@ -63,7 +63,7 @@ const db = firebase.firestore();
 // Users mapping
 const users = { "foreverus10":"Kakka", "foreverus29":"Bacha" };
 
-// Actual login passwords
+// Login passwords
 const validUsers = {
   "foreverus10":"bachakakka102913",
   "foreverus29":"bachakakka102913"
@@ -123,7 +123,7 @@ function initChat(){
     messagesDiv.innerHTML="";
     snapshot.forEach(doc=>{
       const msg = doc.data();
-      if(msg.deletedFor && msg.deletedFor.includes(currentUser)) return; // skip deleted for me
+      if(msg.deletedFor && msg.deletedFor.includes(currentUser)) return;
       const msgDate = msg.time.toDate();
       const dateStr = msgDate.toLocaleDateString();
       if(dateStr!==lastMsgDate){
