--- a/indext.html
+++ b/indext.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>UnknownChat Test</title>
-</head>
+<html>
 <body>
-<div id="login">
-  <h2>Login Screen Test</h2>
-  <input type="text" placeholder="Username"><br>
-  <input type="password" placeholder="Password"><br>
-  <button>Login</button>
-</div>
+<h2>Login Screen Test</h2>
 </body>
 </html>
