--- a/index.html
+++ b/index.html
@@ -3,21 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>UnknownChat</title>
+<title>UnknownChat Test</title>
 <style>
-body{margin:0;font-family:Arial,sans-serif;background:#f0f0f0;}
-#login,#chat{display:none;padding:20px;}
-input{padding:10px;margin:5px 0;width:90%;}
-button{padding:10px;margin:5px 0;width:95%;}
-#messages{max-height:70vh;overflow-y:auto;margin-bottom:10px;}
-.msg{padding:8px 12px;border-radius:10px;margin:5px 0;max-width:70%;position:relative;}
-.mine{background:#dcf8c6;margin-left:auto;text-align:right;}
-.other{background:#fff;margin-right:auto;text-align:left;}
-.time{font-size:0.7em;color:gray;margin-top:2px;}
-.header{font-weight:bold;font-size:1.1em;margin-bottom:10px;}
-#typing{font-style:italic;color:gray;}
-.date-separator{text-align:center;font-size:0.8em;color:gray;margin:10px 0;}
-.delete-btn{font-size:0.7em;color:red;cursor:pointer;margin-left:5px;}
+body{margin:0;font-family:Arial,sans-serif;background:#f0f0f0;display:flex;justify-content:center;align-items:center;height:100vh;}
+#login{background:#fff;padding:20px;border-radius:10px;box-shadow:0 0 10px rgba(0,0,0,0.2);}
+input{display:block;width:100%;margin:10px 0;padding:10px;}
+button{width:100%;padding:10px;margin-top:10px;}
+#loginStatus{color:red;margin-top:10px;font-size:0.9em;}
 </style>
 </head>
 <body>
@@ -25,27 +17,14 @@ button{padding:10px;margin:5px 0;width:95%;}
 <div id="login">
   <h2>UnknownChat Login</h2>
   <input type="text" id="username" placeholder="Username"><br>
-  <input type="password" id="password" placeholder="Password">
-  <span id="togglePass" style="cursor:pointer;">👁️</span><br>
+  <input type="password" id="password" placeholder="Password"><br>
   <button id="loginBtn">Login</button>
   <div id="loginStatus"></div>
 </div>
 
-<div id="chat">
-  <div class="header" id="chatHeader">
-    <div id="chatName"></div>
-    <div id="chatStatus" style="font-size:12px;color:#777;"></div>
-  </div>
-  <div id="typing"></div>
-  <div id="messages"></div>
-  <input type="text" id="msgInput" placeholder="Type a message...">
-  <button id="sendBtn">Send</button>
-  <button id="logoutBtn">Logout</button>
-</div>
-
+<!-- Firebase scripts -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 
 <script>
 // Firebase config
@@ -60,167 +39,23 @@ const firebaseConfig = {
 firebase.initializeApp(firebaseConfig);
 const db = firebase.firestore();
 
-// Users mapping
-const users = { "foreverus10":"Kakka", "foreverus29":"Bacha" };
+// Users & passwords
+const validUsers = { "foreverus10":"bachakakka102913", "foreverus29":"bachakakka102913" };
 
-// Login passwords
-const validUsers = {
-  "foreverus10":"bachakakka102913",
-  "foreverus29":"bachakakka102913"
-};
-
-let currentUser="", friendUser="";
-const loginDiv = document.getElementById("login");
-const chatDiv = document.getElementById("chat");
 const loginBtn = document.getElementById("loginBtn");
-const sendBtn = document.getElementById("sendBtn");
-const logoutBtn = document.getElementById("logoutBtn");
-const msgInput = document.getElementById("msgInput");
-const messagesDiv = document.getElementById("messages");
-const chatName = document.getElementById("chatName");
-const chatStatus = document.getElementById("chatStatus");
-const typingDiv = document.getElementById("typing");
-const usernameInput = document.getElementById("username");
-const passwordInput = document.getElementById("password");
-const togglePass = document.getElementById("togglePass");
 const loginStatus = document.getElementById("loginStatus");
 
-// Toggle password visibility
-togglePass.onclick = ()=>{ passwordInput.type = passwordInput.type==="password"?"text":"password"; }
-
-// Login
 loginBtn.onclick = ()=>{
-  const u = usernameInput.value.trim();
-  const p = passwordInput.value.trim();
+  const u = document.getElementById("username").value.trim();
+  const p = document.getElementById("password").value.trim();
   if(validUsers[u] && validUsers[u]===p){
-    currentUser=u;
-    friendUser=(u==="foreverus10")?"foreverus29":"foreverus10";
-    loginDiv.style.display="none";
-    chatDiv.style.display="block";
-    initChat();
-    bindFriendHeader(currentUser,friendUser);
-    setCurrentOnline();
-  } else loginStatus.innerText="Invalid username or password";
-}
-
-// Logout
-logoutBtn.onclick = ()=>{ location.reload(); }
-
-// Messages
-let lastMsgDate="";
-let typingTimeout;
-
-// Initialize chat
-function initChat(){
-  // Typing indicator
-  db.collection("status").doc(friendUser).onSnapshot(snap=>{
-    const data = snap.data();
-    if(data) typingDiv.innerText = data.typing?"Typing...":"";
-  });
-
-  // Listen messages
-  db.collection("messages").orderBy("time").onSnapshot(snapshot=>{
-    messagesDiv.innerHTML="";
-    snapshot.forEach(doc=>{
-      const msg = doc.data();
-      if(msg.deletedFor && msg.deletedFor.includes(currentUser)) return;
-      const msgDate = msg.time.toDate();
-      const dateStr = msgDate.toLocaleDateString();
-      if(dateStr!==lastMsgDate){
-        const sep = document.createElement("div");
-        sep.className="date-separator";
-        sep.innerText = (dateStr===new Date().toLocaleDateString())?"Today":dateStr;
-        messagesDiv.appendChild(sep);
-        lastMsgDate=dateStr;
-      }
-      const div = document.createElement("div");
-      div.className = (msg.user===currentUser)?"msg mine":"msg other";
-      div.innerHTML = `<span>${msg.text}</span><div class="time">${msg.user===currentUser?formatTime(msgDate)+" "+getStatusIcon(msg.status):formatTime(msgDate)}</div>`;
-      if(msg.user===currentUser){
-        const delMe = document.createElement("span");
-        delMe.className="delete-btn"; delMe.innerText="Delete for me";
-        delMe.onclick=()=>deleteMsg(doc.id,false);
-        const delBoth = document.createElement("span");
-        delBoth.className="delete-btn"; delBoth.innerText="Delete for both";
-        delBoth.onclick=()=>deleteMsg(doc.id,true);
-        div.appendChild(delMe);
-        div.appendChild(delBoth);
-      }
-      messagesDiv.appendChild(div);
-    });
-    messagesDiv.scrollTop=messagesDiv.scrollHeight;
-  });
-}
-
-// Send message
-sendBtn.onclick = ()=>{ sendMessage(); }
-msgInput.oninput = ()=>{
-  db.collection("status").doc(currentUser).set({typing:true},{merge:true});
-  clearTimeout(typingTimeout);
-  typingTimeout = setTimeout(()=>{
-    db.collection("status").doc(currentUser).set({typing:false},{merge:true});
-  },1000);
-}
-
-function sendMessage(){
-  const text = msgInput.value.trim();
-  if(!text) return;
-  db.collection("messages").add({
-    text,
-    user: currentUser,
-    time: firebase.firestore.Timestamp.now(),
-    status: "sent"
-  });
-  msgInput.value="";
-}
-
-// Format time HH:MM
-function formatTime(d){return d.getHours().toString().padStart(2,'0')+":"+d.getMinutes().toString().padStart(2,'0');}
-
-// Status icons
-function getStatusIcon(status){
-  if(status==="sent") return "✔";
-  if(status==="delivered") return "✔✔";
-  if(status==="seen") return '<span style="color:#ff69b4;">✔✔</span>';
-  return "";
-}
-
-// Delete message
-function deleteMsg(id,forBoth){
-  if(forBoth){
-    if(confirm("Delete for both?")) db.collection("messages").doc(id).delete();
+    loginStatus.style.color="green";
+    loginStatus.innerText="Login successful! (Test)";
+    console.log("Login:", u);
   } else {
-    db.collection("messages").doc(id).update({deletedFor: firebase.firestore.FieldValue.arrayUnion(currentUser)});
+    loginStatus.style.color="red";
+    loginStatus.innerText="Invalid username or password";
   }
-}
-
-// Header & friend status
-function bindFriendHeader(currentUser, friendUser){
-  chatName.innerText = users[friendUser];
-  db.collection("status").doc(friendUser).onSnapshot(snap=>{
-    if(!snap.exists) return;
-    const s = snap.data();
-    if(s.online) chatStatus.innerText="online";
-    else chatStatus.innerText = s.lastSeen?`last seen ${formatLastSeen(s.lastSeen)}`:"offline";
-  });
-}
-
-// Format last seen HH:MM
-function formatLastSeen(ts){
-  if(!ts) return "";
-  const d = ts.toDate ? ts.toDate() : new Date(ts);
-  return d.getHours().toString().padStart(2,'0')+":"+d.getMinutes().toString().padStart(2,'0');
-}
-
-// Set current user online
-function setCurrentOnline(){
-  db.collection("status").doc(currentUser).set({online:true},{merge:true});
-  window.addEventListener("beforeunload", ()=>{
-    db.collection("status").doc(currentUser).set({
-      online:false,
-      lastSeen: firebase.firestore.FieldValue.serverTimestamp()
-    },{merge:true});
-  });
 }
 </script>
 </body>
